 * Fixed problem #492479 (file replace prompt must show date and size of files)
 * Fixed problem #617140 (GNOME Goal: Use accessor functions instead direct access)
 * Fixed problem #621756 (custom port for ftp is not saved)
 * Fixed problems #632064, #632208, #633107, #633167, #633331, #634972, #637873, #638059 (bugs in gnome-commander-help.master.po)
 * Fixed problem #657780 (bugs in nl.po)
 * Fixed Ubuntu problem #117226 (bookmarks unification)
 * Fixed problem with right mouse button selection not being precise

New features:
 * Support for tabs
 * Revamped bookmarks dialog
 * Revamped file properties dialog
 * One instance mode
 * User defined LS_COLORS colours
 * Enhanced file name matching in quick search
 * Open terminal with administrator privileges
 * Prompt to confirm drag & drop operations
 * Context popup menu for internal viewer
 * --config-dir command line option for customized location of config files
 * New colour theme: green tiger
 * New or updated docs: cs, de, en, es, fr, sl
 * New or updated translations: cs, da, eo, es, eu, fr, hu, ko, nb, pl, pt_BR, ro, ru, sl, uk, zh_CN
 * New key bindings:
      CTRL+T         Open directory in a new tab (replaces the old Multi-Rename-Tool binding)
      CTRL+W         Close current tab
      CTRL+SHIFT+W   Close all tabs
      CTRL+TAB       Switch to the next tab
      CTRL+SHIFT+TAB Switch to the previous tab
      SUPER+1        Change left connection
      SUPER+2        Change right connection


===================================
gnome-commander 1.2.8.13
---------------

Bug fixes:
 * Fixed problem #646871 (crash on file properties when connected to FTP)


===================================
gnome-commander 1.2.8.12
---------------

Bug fixes:
 * Fixed problem #618214 (crash when cancel a search)
 * Fixed problem #640387 (yet another fix for deprecated python modules: md5, sha1)
 * Fixed problem #649375 (bookmarks not updated for newly added ones)
 * Fixed problem with mkdir permissions

